force-app/main/default/objects/KYC_Document__c/KYC_Document__c.object-meta.xml
<CustomObject>
    <description>This object holds all KYC Checklists required for a customer.</description>
    <label>KYC Document</label>
    <nameField>
        <label>KYC Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KYC Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>