force-app/main/default/objects/KYC_Document__c/fields/Type_Of_Document__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Document__c</fullName>
    <label>Type Of Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>PAN card</fullName>
            </value>
            <value>
                <fullName>Voter’s Identity card</fullName>
            </value>
            <value>
                <fullName>Driving license</fullName>
            </value>
            <value>
                <fullName>Bank account statement</fullName>
            </value>
            <value>
                <fullName>Adhar Card</fullName>
            </value>
            <value>
                <fullName>Ration card</fullName>
            </value>
            <value>
                <fullName>Certificate of incorporation</fullName>
            </value>
            <value>
                <fullName>Memorandum of Association</fullName>
            </value>
            <value>
                <fullName>Articles of Association</fullName>
            </value>
            <value>
                <fullName>Power of Attorney granted to its managers, officers or employees to transact business on its behalf</fullName>
            </value>
            <value>
                <fullName>Copy of PAN allotment letter</fullName>
            </value>
            <value>
                <fullName>Registration certificate (if registered)</fullName>
            </value>
            <value>
                <fullName>Partnership deed</fullName>
            </value>
            <value>
                <fullName>Power of Attorney granted to a partner or an employee of the firm to transact business on its behalf</fullName>
            </value>
            <value>
                <fullName>Any officially valid document identifying the partners and the person holding the Power of Attorney and their addresses</fullName>
            </value>
            <value>
                <fullName>Telephone bill in the name of firm/ partners</fullName>
            </value>
            <value>
                <fullName>Certificate of Registration, if registered</fullName>
            </value>
            <value>
                <fullName>Power of Attorney granted to transact business on its behalf</fullName>
            </value>
            <value>
                <fullName>Any officially valid document to identify the trustees, settlers, beneficiaries and those holding the Power of Attorney, founders/ managers/ directors and their addresses</fullName>
            </value>
            <value>
                <fullName>Resolution of the managing body of the foundation/ association</fullName>
            </value>
            <value>
                <fullName>Telephone bill</fullName>
            </value>
            <value>
                <fullName>IEC Certificate</fullName>
            </value>
            <value>
                <fullName>GST Registration Copy</fullName>
            </value>
            <value>
                <fullName>Authorised Dealer Code Bank Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>