force-app/main/default/objects/KYC_Document__c/fields/Upload_Proof__c.field-meta.xml
<CustomField>
    <fullName>Upload_Proof__c</fullName>
    <description>This field is to upload copy of KYC document.</description>
    <label>Upload Proof</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>